[package]
name = 'tinymap'
version = '0.1.0'
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'

[dependencies]

[dev-dependencies]
criterion = "0.3"
eggtimer = '*'
rand = "*"

[features]
default = ['alloc']
alloc = []

[[bench]]
name = "map"
harness = false

[[bench]]
name = "set"
harness = false