[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'tinymap'
version = '0.1.0'
decription = 'Array-based maps and sets'
documentation = 'https://docs.rs/tinymap'
repository = 'https://github.com/kaikalii/tinymap'
readme = 'readme.md'
license = 'MIT'
keywords = [
    'hash',
    'map',
    'set',
    'array',
]
categories = [
    'data-structures',
    'no-std',
]

[features]
alloc = []
default = ['alloc']

[dependencies]

[dev-dependencies]
criterion = '0.3'
rand = '0.7.3'


[[bench]]
harness = false
name = 'map'

[[bench]]
harness = false
name = 'set'