[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'tinymap'
version = '0.1.0'
description = 'Array-based maps and sets'
documentation = 'https://docs.rs/tinymap'
repository = 'https://github.com/kaikalii/tinymap'
readme = 'readme.md'
license = 'MIT'
keywords = ['hash', 'map', 'set', 'array']
categories = ['data-structures', 'no-std']

[features]
alloc = []
default = ['alloc']

[dependencies.serde]
version = '1.0.106'
optional = true

[package.metadata.docs.rs]
features = ['serde']

[dev-dependencies]
criterion = '0.3'
rand = '0.7.3'
serde_yaml = '0.8.11'

[[bench]]
harness = false
name = 'map'

[[bench]]
harness = false
name = 'set'
